fixed spacing for smaller screens

--- a/personalWebsite/css/fonts.css
+++ b/personalWebsite/css/fonts.css
@@ -91,7 +91,7 @@
 }
 
 .shiftDown {
-  transform:translate( 0px, 15px);
+  transform:translate( 0px, 12px);
   font-size:13px;
 }
 
