--- a/personalWebsite/css/general.css
+++ b/personalWebsite/css/general.css
@@ -54,7 +54,7 @@ body{
 
 .mainWrapper {
   position:absolute;
-  top:100px;
+  top:50px;
   left:50px;
   width:75%;
   height:75%;
